<resources>
    <string name="enter_ending_mileage_str">Enter ending mileage</string>
    <string name="desc">DESC</string>
    <string name="end_shift">End Shift</string>
    <string name="on_call_end_time">On-call end time:</string>
    <string name="user_ending_on_call">User ending on-call:</string>
    <string name="end_on_call_str_1">End on-call</string>
    <string name="app_name">Job Viewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lance_group_plc">Lanes Group Plc</string>
    <string name="job_viewer">Job Viewer</string>
    <string name="working_with_thames">Working with Thames Water</string>
    <string name="copyright2015">Copyright 2016 Lanes Group Plc. All rights reserved</string>
    <string name="welcome">Welcome</string>
    <string name="please_clock_in_to_begin">Please \'Clock-in\' to begin</string>
    <string name="shout_about_safety_h">shout about safety</string>
    <string name="travel_started">Travel started: </string>
    <string name="clock_in_str">Clock-in</string>
    <string name="start_shift">Start Shift</string>
    <string name="start_on_call">Start On-Call</string>
    <string name="start_on_call_btn">Start on-call</string>
    <string name="start_shift_1">Start shift</string>
    <string name="tmp_date_time">11/06/2015 12:12PM</string>
    <string name="tmp_email_address">tarun@yopmail.com</string>
    <string name="start_text">Start</string>
    <string name="check_out_vehicle">Check-out vehicle</string>
    <string name="start_break">Start Break</string>
    <string name="start_break_1">Start break</string>
    <string name="on_call_start_time">On-call start time:</string>
    <string name="end_button">End</string>
    <string name="shift_complete">Shift Complete</string>
    <string name="shift_summary">Shift summary</string>
    <string name="shift_hours">Shift hours:</string>
    <string name="tmp_shift_time">0h 13m</string>
    <string name="break_taken">Breaks taken:</string>
    <string name="tmp_break_taken">0</string>
    <string name="hours_worked">Hours worked:</string>
    <string name="work_completed">Work completed:</string>
    <string name="please_leave_your_phone">Please leave your phone switched on and connected to the\nInternet for at least one hour to help make sure all data is\nautomatically sent to the office.</string>
    <string name="shift_complete_thank_you">Shift complete - thank you</string>
    <string name="risk_assessment">Risk Assessment</string>
    <string name="water_abstraction">Water Abstraction</string>
    <string name="do_you_need_toabstract_water">Do you need to abstract water?</string>
    <string name="water_abstraction_desc">(Water abstraction is the process of taking \nwater from any ground source, surface water or \ntidal water)</string>
    <string name="stop_work">Stop Work</string>
    <string name="you_response_indicates">Your response indicates it may not be\nsafe to continue work at this site.\nPlease contact your field manager to\ndiscuss available options as soon as possible.</string>
    <string name="after_contacting">After contacting your field manager, tap \'Stop\' to close or \'Resume\' to continue from the previous question.</string>
    <string name="success">Success!</string>
    <string name="vistec_job_number">Vistec Job Number</string>
    <string name="vistec_number">001212QWER</string>
    <string name="work_and_photos">Work and photos for this job have been\ncompleted. All data will be sent to the office\nautomatically as long as you have an internet\nconnection.</string>
    <string name="tap_done_to_continue">Tap \'Done\' to continue to the main\nscreen</string>
    <string name="done">Done</string>
    <string name="update_previous">Update Previous Risk Assessment</string>
    <string name="review_your_risk">Review your last risk assessment below. Select a question to continue a new risk assessment from that point.</string>
    <string name="set_up_your">Set up your basic cones and signs at the front and rear of the vehicle as required</string>
    <string name="cones_signs">Cones/signs set-up</string>
    <string name="capture_the_setup">Capture the set-up in front of, are behind, the vehicle. At least two</string>
    <string name="tmp_no">No</string>
    <string name="current_present">Is the current present?</string>
    <string name="tmp_yes">Yes</string>
    <string name="select_how_you_will">Select how you will be clocking-in...</string>
    <string name="select_how_you_will_clock_in">Select how you will be clocking-in</string>
    <string name="shift">Shift</string>
    <string name="oncall">On-call</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="select_the_activity">Select the activity you are starting...</string>
    <string name="work">Work</string>
    <string name="work_no_photos">Work (no photos or data)</string>
    <string name="training">Training/Toolbox Talk</string>
    <string name="you_must_have_confirmation">You must have confirmation from a manager before stopping this job - enter their name below:</string>
    <string name="name">Name:</string>
    <string name="enter_manager_name">Enter manager\'s name</string>
    <string name="tap_confirm_to_close">Tap \'Confirm\' to close the job. You will no longer be able to edit data for this record.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_work_stop">Confirm Work Stop</string>
    <string name="confirm_work_stop_d">Confirm Work Stop</string>
    <string name="break_start">Start break</string>
    <string name="your_break_start_time">Your break start time will be logged as:</string>
    <string name="your_break_end_time">Your break end time will be logged as:</string>
    <string name="check_here_if_you_need">Check here if you need to override this system generated timestamp</string>
    <string name="cancel">Cancel</string>
    <string name="select_new_timestamp">Select New Timestamp</string>
    <string name="override_reason">Override Reason</string>
    <string name="override_reason_msg">Please provide a reason for overriding the system generated timestamp</string>
    <string name="you_should_only">You should only override system generated timestamps in exceptional circumstances.</string>
    <string name="you_do_not_need">You don’t need to change times to match your exact shift timing if the difference is a few minutes</string>
    <string name="new_date">New Date</string>
    <string name="new_time">New Time</string>
    <string name="activity_type">Activity Type</string>
    <string name="flooding_status">Flooding Status</string>
    <string name="blockage">Blockage</string>
    <string name="cctv">CCTV</string>
    <string name="line_clean">Line clean</string>
    <string name="pump_down">Pump Down</string>
    <string name="sfoc">SFOC</string>
    <string name="clean_up">Clean Up</string>
    <string name="sropr">SROPR</string>
    <string name="enable">Enable</string>
    <string name="private_str">Private</string>
    <string name="cover">Cover</string>
    <string name="dig_down">Dig Down</string>
    <string name="make_safe">Make Safe</string>
    <string name="lining">Lining</string>
    <string name="wet_well_clean">Wet well clean</string>
    <string name="tmp_user_email_str">demonstration2</string>
    <string name="would_you_like_to_str">Would you like to check-out a vehicle at the start of your shift?</string>
    <string name="tmp_user_group_str">lanesgroup.com</string>
    <string name="remember_my_selection">Remember my selection</string>
    <string name="remember_vehicle_registration">Remember vehicle registration</string>
    <string name="check_out_str">Check-Out Vehicle</string>
    <string name="returnVahicle">Return Vehicle</string>
    <string name="enter_details_str">Enter details for the vehicle you will be using to start this shift</string>
    <string name="vehicle_registration_str">Vehicle registration:</string>
    <string name="vehicle_mileage_str">Vehicle mileage:</string>
    <string name="enter_registration">Enter registration:</string>
    <string name="enter_registration_1">Enter registration</string>
    <string name="enter_mileage">Enter mileage:</string>
    <string name="enter_mileage_1">Enter mileage</string>
    <string name="confirm_the_info_str">Confirm the information below</string>
    <string name="shift_start_time_str">Shift start time:</string>
    <string name="user">User:</string>
    <string name="tmp_user_email">demonstration2@lanesgroup.com</string>
    <string name="tmp_vehicle_number">GJ065PPP</string>
    <string name="i_confirm_the_info_str">I confirm the information above is correct (required to continue)</string>
    <string name="risk_assessment_str">Risk Assessment</string>
    <string name="select_the_type_str">Select the type of work to be carried out from the choices below</string>
    <string name="non_excavation_str">Non Excavation</string>
    <string name="excavation_str">Excavation</string>
    <string name="breaking_ground">(Breaking ground)</string>
    <string name="save">Save</string>
    <string name="non_excavation_risk_assessment_str">Non-Excavation Risk Assessment</string>
    <string name="overhead_cables_str">Overhead Cables</string>
    <string name="question_are_ther_any_str">Are there any overhead cables at this location that present a risk?</string>
    <string name="error_msg_str">Ensure that your vehicle is a safe height to continue. If in doubt contact your field manager.</string>
    <string name="pollution_confirmation">Pollution Confirmation</string>
    <string name="pollution_cofirmation_msg">You have marked this job as a pollution, is this correct?</string>
    <string name="final_Confirmation_that_work_must_be_stopped">Please provide final confirmation that work must be stopped.</string>
    <string name="da_confirmation">DA Call Confirmation</string>
    <string name="da_cofirmation_msg">Did you get through to DA?</string>
    <string name="new_work_str">New Work</string>
    <string name="enter_the_vistec_str">Enter the Vistec job number</string>
    <string name="progress_step_return_vehicle">Step 1 of 2</string>
    <string name="check_in_screen_return_vehicle">Step 1 of 1</string>
    <string name="checkinVehicleProcess">Step 1 of 1</string>
    <string name="checkOutVehicleProcess">Step 1 of 1</string>
    <string name="progress_step">Step 1 of 5</string>
    <string name="progress_step_end_on_call">Step 2 of 2</string>
    <string name="progress_step_capture">Step 2 of 5</string>
    <string name="progress_step_pollution">Step 1 of 6</string>
    <string name="progress_step_capture_pollution">Step 2 of 6</string>
    <string name="progress_step_assessment">Step 3 of 5</string>
    <string name="progress_step_assessment_pollution">Step 3 of 6</string>
    <string name="district_str">District:</string>
    <string name="tmp_number">00</string>
    <string name="district_four_tmp_number">0000</string>
    <string name="task_number_str">Task number:</string>
    <string name="task_number_str_1">Number:</string>
    <string name="is_this_pollution_str">Is this a pollution?</string>
    <string name="non_excavation_risk_str">Non-Excavation Risk Assessment</string>
    <string name="excavation_risk_str">Excavation Risk Assessment</string>
    <string name="tmp_progress_step">20%</string>
    <string name="set_up_on_arrival_str">Set-up on arrival</string>
    <string name="capture_the_setup_str">Capture the set-up in front of, and behind, the vehicle. At least two photos are required.</string>
    <string name="capture_image_str">Capture image</string>
    <string name="location_awareness_str">Location Awareness</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
</resources>