<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width920"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.jobviewer.util.ConfirmDialog" >

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_header_height242"
        android:background="@drawable/dialog_header_background"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="@dimen/black_lato_regular_small55"
        android:paddingRight="@dimen/black_lato_regular_small55"
        android:text="@string/pollution_confirmation"
        android:textColor="@color/white"
        android:textSize="@dimen/dialog_detail_top_margin80" />

    <TextView
        android:id="@+id/cofirmation_msg_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dialog_detail_bottom_margin95"
        android:paddingLeft="@dimen/white_lato_regular_small40"
        android:paddingRight="@dimen/white_lato_regular_small40"
        android:paddingTop="@dimen/dialog_detail_top_margin80"
        android:text="@string/pollution_cofirmation_msg"
        android:textColor="@color/black"
        android:textSize="@dimen/black_lato_regular_small55" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height152" >

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_grey_button"
            android:text="@string/tmp_no"
            android:textAllCaps="false"
            android:textColor="@color/lighter_grey"
            android:textSize="@dimen/dialog_black_lato_regular_small60" />

        <Button
            android:id="@+id/dialog_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_red_button"
            android:text="@string/tmp_yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_black_lato_regular_small60" />
    </LinearLayout>

</LinearLayout>