<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width920"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_header_height242"
        android:background="@drawable/dialog_header_background"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="@dimen/black_lato_regular_small55"
        android:paddingRight="@dimen/black_lato_regular_small55"
        android:text="@string/confirm_work_stop_d"
        android:textColor="@color/white"
        android:textSize="@dimen/dialog_detail_top_margin80" />

    <TextView
        android:id="@+id/cofirmation_msg_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:drawableLeft="@drawable/alert_confirm_image"
        android:drawablePadding="10dp"
        android:gravity="left|center"
        android:paddingBottom="@dimen/dialog_detail_bottom_margin95"
        android:paddingLeft="@dimen/white_lato_regular_small40"
        android:paddingRight="@dimen/white_lato_regular_small40"
        android:paddingTop="@dimen/dialog_detail_top_margin80"
        android:text="@string/final_Confirmation_that_work_must_be_stopped"
        android:textColor="@color/black"
        android:textSize="@dimen/black_lato_regular_small55" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height152"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_grey_button"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/lighter_grey"
            android:textSize="@dimen/dialog_black_lato_regular_small60" />

        <TextView
            android:id="@+id/dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_red_button"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_black_lato_regular_small60" />
    </LinearLayout>

</LinearLayout>